--- a/packages.bib
+++ b/packages.bib
@@ -7,12 +7,118 @@
   url = {https://www.R-project.org/},
 }
 
+@Manual{R-Biobase,
+  title = {Biobase: Base functions for Bioconductor},
+  author = {R. Gentleman and V. Carey and M. Morgan and S. Falcon},
+  year = {2021},
+  note = {R package version 2.52.0},
+  url = {https://bioconductor.org/packages/Biobase},
+}
+
+@Manual{R-BiocGenerics,
+  title = {BiocGenerics: S4 generic functions used in Bioconductor},
+  author = {The Bioconductor Dev Team},
+  year = {2021},
+  note = {R package version 0.38.0},
+  url = {https://bioconductor.org/packages/BiocGenerics},
+}
+
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
   year = {2021},
   note = {R package version 0.22},
   url = {https://CRAN.R-project.org/package=bookdown},
+}
+
+@Manual{R-ComplexHeatmap,
+  title = {ComplexHeatmap: Make Complex Heatmaps},
+  author = {Zuguang Gu},
+  year = {2021},
+  note = {https://github.com/jokergoo/ComplexHeatmap,
+https://jokergoo.github.io/ComplexHeatmap-reference/book/},
+}
+
+@Manual{R-DESeq2,
+  title = {DESeq2: Differential gene expression analysis based on the negative
+binomial distribution},
+  author = {Michael Love and Simon Anders and Wolfgang Huber},
+  year = {2021},
+  note = {R package version 1.32.0},
+  url = {https://github.com/mikelove/DESeq2},
+}
+
+@Manual{R-dplyr,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+  year = {2021},
+  note = {R package version 1.0.7},
+  url = {https://CRAN.R-project.org/package=dplyr},
+}
+
+@Manual{R-DT,
+  title = {DT: A Wrapper of the JavaScript Library DataTables},
+  author = {Yihui Xie and Joe Cheng and Xianying Tan},
+  year = {2021},
+  note = {R package version 0.18},
+  url = {https://github.com/rstudio/DT},
+}
+
+@Manual{R-GenomeInfoDb,
+  title = {GenomeInfoDb: Utilities for manipulating chromosome names, including modifying
+them to follow a particular naming style},
+  author = {Sonali Arora and Martin Morgan and Marc Carlson and H. Pagès},
+  year = {2021},
+  note = {R package version 1.28.0},
+  url = {https://bioconductor.org/packages/GenomeInfoDb},
+}
+
+@Manual{R-GenomicRanges,
+  title = {GenomicRanges: Representation and manipulation of genomic intervals},
+  author = {P. Aboyoun and H. Pagès and M. Lawrence},
+  year = {2021},
+  note = {R package version 1.44.0},
+  url = {https://bioconductor.org/packages/GenomicRanges},
+}
+
+@Manual{R-ggplot2,
+  title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
+  author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
+  year = {2021},
+  note = {R package version 3.3.5},
+  url = {https://CRAN.R-project.org/package=ggplot2},
+}
+
+@Manual{R-ggpubr,
+  title = {ggpubr: ggplot2 Based Publication Ready Plots},
+  author = {Alboukadel Kassambara},
+  year = {2020},
+  note = {R package version 0.4.0},
+  url = {https://rpkgs.datanovia.com/ggpubr/},
+}
+
+@Manual{R-googledrive,
+  title = {googledrive: An Interface to Google Drive},
+  author = {Lucy {D'Agostino McGowan} and Jennifer Bryan},
+  year = {2020},
+  note = {R package version 1.0.1},
+  url = {https://CRAN.R-project.org/package=googledrive},
+}
+
+@Manual{R-googlesheets4,
+  title = {googlesheets4: Access Google Sheets using the Sheets API V4},
+  author = {Jennifer Bryan},
+  year = {2021},
+  note = {R package version 0.3.0},
+  url = {https://github.com/tidyverse/googlesheets4},
+}
+
+@Manual{R-IRanges,
+  title = {IRanges: Foundation of integer range manipulation in Bioconductor},
+  author = {H. Pagès and P. Aboyoun and M. Lawrence},
+  year = {2021},
+  note = {R package version 2.26.0},
+  url = {https://bioconductor.org/packages/IRanges},
 }
 
 @Manual{R-knitr,
@@ -23,12 +129,131 @@
   url = {https://yihui.org/knitr/},
 }
 
+@Manual{R-MatrixGenerics,
+  title = {MatrixGenerics: S4 Generic Summary Statistic Functions that Operate on
+Matrix-Like Objects},
+  author = {Constantin Ahlmann-Eltze and Peter Hickey and Hervé Pagès},
+  year = {2021},
+  note = {R package version 1.4.0},
+  url = {https://bioconductor.org/packages/MatrixGenerics},
+}
+
+@Manual{R-matrixStats,
+  title = {matrixStats: Functions that Apply to Rows and Columns of Matrices (and to
+Vectors)},
+  author = {Henrik Bengtsson},
+  year = {2021},
+  note = {R package version 0.59.0},
+  url = {https://github.com/HenrikBengtsson/matrixStats},
+}
+
+@Manual{R-purrr,
+  title = {purrr: Functional Programming Tools},
+  author = {Lionel Henry and Hadley Wickham},
+  year = {2020},
+  note = {R package version 0.3.4},
+  url = {https://CRAN.R-project.org/package=purrr},
+}
+
+@Manual{R-readr,
+  title = {readr: Read Rectangular Text Data},
+  author = {Hadley Wickham and Jim Hester},
+  year = {2020},
+  note = {R package version 1.4.0},
+  url = {https://CRAN.R-project.org/package=readr},
+}
+
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2021},
   note = {R package version 2.9},
   url = {https://CRAN.R-project.org/package=rmarkdown},
+}
+
+@Manual{R-S4Vectors,
+  title = {S4Vectors: Foundation of vector-like and list-like containers in
+Bioconductor},
+  author = {H. Pagès and M. Lawrence and P. Aboyoun},
+  year = {2021},
+  note = {R package version 0.30.0},
+  url = {https://bioconductor.org/packages/S4Vectors},
+}
+
+@Manual{R-stringr,
+  title = {stringr: Simple, Consistent Wrappers for Common String Operations},
+  author = {Hadley Wickham},
+  year = {2019},
+  note = {R package version 1.4.0},
+  url = {https://CRAN.R-project.org/package=stringr},
+}
+
+@Manual{R-SummarizedExperiment,
+  title = {SummarizedExperiment: SummarizedExperiment container},
+  author = {Martin Morgan and Valerie Obenchain and Jim Hester and Hervé Pagès},
+  year = {2021},
+  note = {R package version 1.22.0},
+  url = {https://bioconductor.org/packages/SummarizedExperiment},
+}
+
+@Manual{R-tibble,
+  title = {tibble: Simple Data Frames},
+  author = {Kirill Müller and Hadley Wickham},
+  year = {2021},
+  note = {R package version 3.1.2},
+  url = {https://CRAN.R-project.org/package=tibble},
+}
+
+@Manual{R-tidybulk,
+  title = {tidybulk: Brings transcriptomics to the tidyverse},
+  author = {Stefano Mangiola},
+  year = {2021},
+  note = {R package version 1.4.0},
+}
+
+@Manual{R-tidyHeatmap,
+  title = {tidyHeatmap: A Tidy Implementation of Heatmap},
+  author = {Stefano Mangiola},
+  year = {2021},
+  note = {https://www.r-project.org,
+https://github.com/stemangiola/tidyHeatmap},
+}
+
+@Manual{R-tidyr,
+  title = {tidyr: Tidy Messy Data},
+  author = {Hadley Wickham},
+  year = {2021},
+  note = {R package version 1.1.3},
+  url = {https://CRAN.R-project.org/package=tidyr},
+}
+
+@Manual{R-tidySummarizedExperiment,
+  title = {tidySummarizedExperiment: Brings SummarizedExperiment to the Tidyverse},
+  author = {Stefano Mangiola},
+  year = {2021},
+  note = {R package version 1.2.0},
+}
+
+@Article{Biobase2015,
+  author = {W. Huber and V. J. Carey and R. Gentleman and S. Anders and M. Carlson and B. S. Carvalho and H. C. Bravo and S. Davis and L. Gatto and T. Girke and R. Gottardo and F. Hahne and K. D. Hansen and R. A. Irizarry and M. Lawrence and M. I. Love and J. MacDonald and V. Obenchain and A. K. {Ole's} and H. {Pag`es} and A. Reyes and P. Shannon and G. K. Smyth and D. Tenenbaum and L. Waldron and M. Morgan},
+  title = {{O}rchestrating high-throughput genomic analysis with {B}ioconductor},
+  journal = {Nature Methods},
+  year = {2015},
+  volume = {12},
+  number = {2},
+  pages = {115--121},
+  url = {http://www.nature.com/nmeth/journal/v12/n2/full/nmeth.3252.html},
+}
+
+@Article{BiocGenerics2015,
+  author = {{Huber} and {W.} and {Carey} and V. J. and {Gentleman} and {R.} and {Anders} and {S.} and {Carlson} and {M.} and {Carvalho} and B. S. and {Bravo} and H. C. and {Davis} and {S.} and {Gatto} and {L.} and {Girke} and {T.} and {Gottardo} and {R.} and {Hahne} and {F.} and {Hansen} and K. D. and {Irizarry} and R. A. and {Lawrence} and {M.} and {Love} and M. I. and {MacDonald} and {J.} and {Obenchain} and {V.} and {{Ole's}} and A. K. and {{Pag`es}} and {H.} and {Reyes} and {A.} and {Shannon} and {P.} and {Smyth} and G. K. and {Tenenbaum} and {D.} and {Waldron} and {L.} and {Morgan} and {M.}},
+  title = {{O}rchestrating high-throughput genomic analysis with {B}ioconductor},
+  journal = {Nature Methods},
+  year = {2015},
+  volume = {12},
+  number = {2},
+  pages = {115--121},
+  url = {http://www.nature.com/nmeth/journal/v12/n2/full/nmeth.3252.html},
 }
 
 @Book{bookdown2016,
@@ -39,6 +264,55 @@
   year = {2016},
   note = {ISBN 978-1138700109},
   url = {https://bookdown.org/yihui/bookdown},
+}
+
+@Article{ComplexHeatmap2016,
+  title = {Complex heatmaps reveal patterns and correlations in multidimensional genomic data},
+  author = {Zuguang Gu and Roland Eils and Matthias Schlesner},
+  journal = {Bioinformatics},
+  year = {2016},
+}
+
+@Article{DESeq22014,
+  title = {Moderated estimation of fold change and dispersion for RNA-seq data with DESeq2},
+  author = {Michael I. Love and Wolfgang Huber and Simon Anders},
+  year = {2014},
+  journal = {Genome Biology},
+  doi = {10.1186/s13059-014-0550-8},
+  volume = {15},
+  issue = {12},
+  pages = {550},
+}
+
+@Article{GenomicRanges2013,
+  title = {Software for Computing and Annotating Genomic Ranges},
+  author = {Michael Lawrence and Wolfgang Huber and Herv\'e Pag\`es and Patrick Aboyoun and Marc Carlson and Robert Gentleman and Martin Morgan and Vincent Carey},
+  year = {2013},
+  journal = {{PLoS} Computational Biology},
+  volume = {9},
+  issue = {8},
+  doi = {10.1371/journal.pcbi.1003118},
+  url = {http://www.ploscompbiol.org/article/info%3Adoi%2F10.1371%2Fjournal.pcbi.1003118},
+}
+
+@Book{ggplot22016,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2016},
+  isbn = {978-3-319-24277-4},
+  url = {https://ggplot2.tidyverse.org},
+}
+
+@Article{IRanges2013,
+  title = {Software for Computing and Annotating Genomic Ranges},
+  author = {Michael Lawrence and Wolfgang Huber and Herv\'e Pag\`es and Patrick Aboyoun and Marc Carlson and Robert Gentleman and Martin Morgan and Vincent Carey},
+  year = {2013},
+  journal = {{PLoS} Computational Biology},
+  volume = {9},
+  issue = {8},
+  doi = {10.1371/journal.pcbi.1003118},
+  url = {http://www.ploscompbiol.org/article/info%3Adoi%2F10.1371%2Fjournal.pcbi.1003118},
 }
 
 @Book{knitr2015,
@@ -81,5 +355,27 @@
   year = {2020},
   note = {ISBN 9780367563837},
   url = {https://bookdown.org/yihui/rmarkdown-cookbook},
+}
+
+@Article{tidybulk2021,
+  title = {tidybulk: an R tidy framework for modular transcriptomic data analysis},
+  author = {Stefano Mangiola and Ramyar Molania and Ruining Dong and Maria A. Doyle & Anthony T. Papenfuss},
+  journal = {Genome Biology},
+  year = {2021},
+  volume = {22},
+  number = {42},
+  url = {https://genomebiology.biomedcentral.com/articles/10.1186/s13059-020-02233-7},
+}
+
+@Article{tidyHeatmap2020,
+  title = {tidyHeatmap: an R package for modular heatmap production based on tidy principles},
+  author = {Mangiola S. and Papenfuss A.},
+  journal = {Journal of Open Source Software},
+  year = {2020},
+  volume = {5},
+  number = {52},
+  pages = {2472},
+  url = {https://doi.org/10.21105/joss.02472},
+  doi = {10.21105/joss.02472},
 }
 
