--- a/book.bib
+++ b/book.bib
@@ -8,3 +8,14 @@
   note = {ISBN 978-1498716963},
   url = {http://yihui.name/knitr/},
 }
+
+@book{RN24,
+   author = {King, G.},
+   title = {Unifying Political Methodology: The Likelihood Theory of Statistical Inference},
+   publisher = {University of Michigan Press},
+   ISBN = {9780472085545},
+   url = {https://books.google.dk/books?id=cligOwrd7XoC},
+   year = {1998},
+   type = {Book}
+}
+
